tests/invalid/ArrayGenerator_Invalid_1.whiley
function f() -> int[]:
    return [0; -1]

public export method test():
    int[] xs = f()